# database-browser

./: README.md  biome.json  bun.lockb  compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.base.config.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.github/workflows/: build.yaml  publish.yaml
src/: global.ts  main.ts  main.tsx  preload.ts  renderer.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/common/: database.ts  utils.ts
src/components/: ButtonTabs.tsx  ConfirmIconButton.tsx  ConnectionDialog.tsx  ManageConnectionsDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarLayout.tsx  SqlLogOutput.tsx  SqlRowTable.tsx  TagMultiSelect.tsx  Titlebar.tsx  TrButton.tsx
src/components/xyflow/: ColumnNode.tsx  TableNode.tsx
src/hooks/: use-debounced-value.tsx
src/layouts/: RootLayout.tsx
src/lib/: async.ts  connection-config-file.ts  database.ts  error.ts  highlight.ts  pgsql.ts  set.ts  utils.ts  zod.ts
src/lib/sql/: core.ts  pgsql.ts
src/models/: SqlLogger.tsx  app.tsx  connection-config.tsx  connection.tsx  model-pool.tsx  theme.tsx
src/renderer/: openai.ts  pgsql.ts
src/renderer/components/: ConnectionDialog.tsx  ManageConnectionsDialog.tsx  SettingsDialog.tsx  SidebarLayout.tsx  SqlRowTable.tsx
src/renderer/hooks/: use-debounced-value.tsx
src/renderer/models/: connection.tsx  settings.tsx
src/renderer/routes/: __root.tsx  index.lazy.tsx
src/renderer/styles/: index.css
src/routes/: __root.tsx  index.lazy.tsx
src/routes/connection/: $connectionId.tsx
src/routes/connection/$connectionId/: index.lazy.tsx  visualizer.lazy.tsx
src/styles/: index.css
src/views/: ConnectionBrowser.tsx  ConnectionInfoView.tsx  ConnectionView.tsx  NewSavedQueryView.tsx  SavedQueryView.tsx  SplashScreen.tsx  TableBrowserView.tsx  TableNodeView.tsx  TagInfoView.tsx
(+4 files in other folders)
